--- a/en/activation/_posts/2015-07-20-ball-pool.md
+++ b/en/activation/_posts/2015-07-20-ball-pool.md
@@ -3,7 +3,7 @@ title: "Ball pool"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/tblZnCsnYWMuT2hRf5K1xexmfJ9J6OygMy7_YelRuLY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACIxTAuAUfkF0nJSnnWhTCga/aktivointi/pallomeri/DSC39275-245px.jpg
   thumb:
 ---
 
@@ -17,20 +17,20 @@ Later on we got a chance to try this with real ball pool balls. Miki seemed to l
 
 ---
 
-[![](https://lh3.googleusercontent.com/7tjtfYkLseac50FOmWfPWegqeprOrYdUMzLMn7NV-dE=w800)](https://lh3.googleusercontent.com/7tjtfYkLseac50FOmWfPWegqeprOrYdUMzLMn7NV-dE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABTByJaLBrg3np7DM-ZEyQaa/aktivointi/pallomeri/DSC39227-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANbbGxyVYaoDk1inuzH2pza/aktivointi/pallomeri/DSC39227.jpg)
 
-[![](https://lh3.googleusercontent.com/ea1oHCD53FmcEZN9LAEWYdmitrtW_2s2iOUuOBOuRn4=w800)](https://lh3.googleusercontent.com/ea1oHCD53FmcEZN9LAEWYdmitrtW_2s2iOUuOBOuRn4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALjBYaHT4AUO_cRGdRWk-5a/aktivointi/pallomeri/DSC39252-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHcP8AcDMsR6Vhyvq_narTa/aktivointi/pallomeri/DSC39252.jpg)
 
-[![](https://lh3.googleusercontent.com/0dL8yGfrGI3IHBOb_zzZ0muCaXLtp4Ex8dvEPSwTAxU=w800)](https://lh3.googleusercontent.com/0dL8yGfrGI3IHBOb_zzZ0muCaXLtp4Ex8dvEPSwTAxU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADp8ZQO0cFGgDB-suKGwGhma/aktivointi/pallomeri/DSC39278-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAASVcy-eQj5MgfOHjpbZ2gAa/aktivointi/pallomeri/DSC39278.jpg)
 
-[![](https://lh3.googleusercontent.com/_Luen2SgHWmJCWNuxpaGuezV_fUOLaMpX1fakVvFeXs=w800)](https://lh3.googleusercontent.com/_Luen2SgHWmJCWNuxpaGuezV_fUOLaMpX1fakVvFeXs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABqY0_T411NwKbTFXaBoSzma/aktivointi/pallomeri/DSC39275-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAARWvQQ0QEdPioRXl0tG6p9a/aktivointi/pallomeri/DSC39275.jpg)
 
-[![](https://lh3.googleusercontent.com/eT2HoSHIk9_qRnpAWZ2Kxg3XCAJJla9gVxqoJ0ntK-w=w800)](https://lh3.googleusercontent.com/eT2HoSHIk9_qRnpAWZ2Kxg3XCAJJla9gVxqoJ0ntK-w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoKZhQ6BEFHsmstQjf06Fta/aktivointi/pallomeri/DSC39274-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABaLTICM3O6zqsNA4V3QeTia/aktivointi/pallomeri/DSC39274.jpg)
 
-[![](https://lh3.googleusercontent.com/9rOlFS0h35Kzo20sROle0dVT8Qe-f3pjHNZ9I6uJjhCHXzTQZTN3ZS30imwJKGMw2t4boi25YaqAZxPpCv3mFFYfy2DYlOKGxrHVQKqq0gElHTW560hPXfsOkGgK9X06-5DNsdY7QQwm_0bQuk-Y-tjV9AhGngq7BVofPC6ytE-pz1DCQkMWJGUzywhXB_bdjwltdN7GXuDsabbH0a5IUxk9csvR0NJ7PKX2wM3PqbgKo1yzL3g5Z5gTTXpcUwxWOv6j69OsxtHhr4fISMPH4cRcyT2oQOI4-r1fpvMZJeMjPgkT3bkAUySYbbROHUHuIsahQrG489iQsAEIXiQSL6n5dEDoefUNCW9Z8MfGd7FFTQTyrozkVkgUYphoVVf54ba9UVnWDCiftMcve0Gk57WD7oXLrR1E50e5y1k01V25aS5znLRMgM_OFCTwKNFWtzAU2bxgPuULoGlw37DiMjM-Ux4Z1S8Xy-h-2Dr7VQlxi-XCx-Iz_tWgafdbQ3brKcrplRX-RNaCb1HwSTVA4XUpwpzOHAHnpx8-FTFNiRqiIlRgJjbA4wTc6t2nfuUEk04q=w800)](https://lh3.googleusercontent.com/9rOlFS0h35Kzo20sROle0dVT8Qe-f3pjHNZ9I6uJjhCHXzTQZTN3ZS30imwJKGMw2t4boi25YaqAZxPpCv3mFFYfy2DYlOKGxrHVQKqq0gElHTW560hPXfsOkGgK9X06-5DNsdY7QQwm_0bQuk-Y-tjV9AhGngq7BVofPC6ytE-pz1DCQkMWJGUzywhXB_bdjwltdN7GXuDsabbH0a5IUxk9csvR0NJ7PKX2wM3PqbgKo1yzL3g5Z5gTTXpcUwxWOv6j69OsxtHhr4fISMPH4cRcyT2oQOI4-r1fpvMZJeMjPgkT3bkAUySYbbROHUHuIsahQrG489iQsAEIXiQSL6n5dEDoefUNCW9Z8MfGd7FFTQTyrozkVkgUYphoVVf54ba9UVnWDCiftMcve0Gk57WD7oXLrR1E50e5y1k01V25aS5znLRMgM_OFCTwKNFWtzAU2bxgPuULoGlw37DiMjM-Ux4Z1S8Xy-h-2Dr7VQlxi-XCx-Iz_tWgafdbQ3brKcrplRX-RNaCb1HwSTVA4XUpwpzOHAHnpx8-FTFNiRqiIlRgJjbA4wTc6t2nfuUEk04q=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoYT59o95TjJLMUwqOdODia/aktivointi/pallomeri/DS01899-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD6CbYKK85YfyxaS7wVvXH8a/aktivointi/pallomeri/DS01899.jpg)
 
-[![](https://lh3.googleusercontent.com/yJpZHKigLjiHciZgsGumOmRyhSKKEYM9kZfO5j2b-REwwRUS3pUqPXmNN8MOddHXI3N0Y3ToTj5qj2gi988GOYjONvuJaKe5P-z9hlDGQJ45WC8SjJi6cZduefF_xWVMybmoksg4QeCvVQehK3FAE7LKUygy4ww-dEWfYKlYbOnjNAxQo0ElMjHUnN-p8uug52EXJTRvgj6JsZszP5YmAynzxcC4nuWcsXinKz6C2oyRLMwU-j5Sw-5Xu9PYnoeI4DWGqtwJ-c4zobmkWxBI1DXmK0MWDr300_1nA86eAtbpo-4Zgrm4FO-oqgsVb6zj1OzEjPBfXuuGoT-oHRpqFwNWPqu1ArP9JPufUPQsiOf67U1k6gdYH7sCPmpv899OJyHEaCziRbGQhTObnE4yA8pKZ-xmsqQ-rhVATimPhuV97X1MJ7fm6H44u1tdYXITU4oeUk00tgf557HsQEkB9-u-6dTuJOs4B4cUkONOItR62AdxOXL7Ca81Tp5Z27xczqkMN7oORANKco1WVwPigbR_S-WnSd4RVuv1TGQxlMwuN4ihQHqi2wgkRJzlDfJNwyrf=w800)](https://lh3.googleusercontent.com/yJpZHKigLjiHciZgsGumOmRyhSKKEYM9kZfO5j2b-REwwRUS3pUqPXmNN8MOddHXI3N0Y3ToTj5qj2gi988GOYjONvuJaKe5P-z9hlDGQJ45WC8SjJi6cZduefF_xWVMybmoksg4QeCvVQehK3FAE7LKUygy4ww-dEWfYKlYbOnjNAxQo0ElMjHUnN-p8uug52EXJTRvgj6JsZszP5YmAynzxcC4nuWcsXinKz6C2oyRLMwU-j5Sw-5Xu9PYnoeI4DWGqtwJ-c4zobmkWxBI1DXmK0MWDr300_1nA86eAtbpo-4Zgrm4FO-oqgsVb6zj1OzEjPBfXuuGoT-oHRpqFwNWPqu1ArP9JPufUPQsiOf67U1k6gdYH7sCPmpv899OJyHEaCziRbGQhTObnE4yA8pKZ-xmsqQ-rhVATimPhuV97X1MJ7fm6H44u1tdYXITU4oeUk00tgf557HsQEkB9-u-6dTuJOs4B4cUkONOItR62AdxOXL7Ca81Tp5Z27xczqkMN7oORANKco1WVwPigbR_S-WnSd4RVuv1TGQxlMwuN4ihQHqi2wgkRJzlDfJNwyrf=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAaX6-h1Go5DDYOndpf5vnna/aktivointi/pallomeri/DS01881-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABW9hIYgNsETcC3mm9Ho30Xa/aktivointi/pallomeri/DS01881.jpg)
 
 Picture about the meercat trick
 
-[![](https://lh3.googleusercontent.com/rX5XMCkuVA_XYcsCqKHmaWfcFJB-lvqplaFIHFRKHY0=w800)](https://lh3.googleusercontent.com/rX5XMCkuVA_XYcsCqKHmaWfcFJB-lvqplaFIHFRKHY0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4e4nlfUwGNX1etVsnmgSNa/temput/1/DSC31982-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABVqTJ74mwYCzE_Ge775XZta/temput/1/DSC31982.jpg)
