--- a/en/activation/_posts/2015-07-20-waiting.md
+++ b/en/activation/_posts/2015-07-20-waiting.md
@@ -3,7 +3,7 @@ title: "Waiting"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/VXj1DczshuW94cxJ3bKSCRXnVLHeew7OsvE8dvroNpc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADC5UyPF6A_bkUIH5FGQXG9a/temput/1/DSC29359-245px.jpg
   thumb:
 ---
 
@@ -15,6 +15,6 @@ It would be so cool to someday put the treat on his nose while he waits the perm
 
 ---
 
-[![](https://lh3.googleusercontent.com/1QCvHQdyMKBks0uROzBJbnKo5iY5kTAIS_FXmeevTYo=w800)](https://lh3.googleusercontent.com/1QCvHQdyMKBks0uROzBJbnKo5iY5kTAIS_FXmeevTYo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtJHPihKp-jYvnVtOiKaGua/temput/1/DSC32591-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZUwR71Hp2hc7K5JynWMYSa/temput/1/DSC32591.jpg)
 
-[![](https://lh3.googleusercontent.com/krzkcFlQsrfH7N-o80COcERrbhVCt4jO82gCbT24jf4=w800)](https://lh3.googleusercontent.com/krzkcFlQsrfH7N-o80COcERrbhVCt4jO82gCbT24jf4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATJCnY41vHMU4fSZY8-J60a/temput/1/DSC29359_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACx_2MllFzHGJ1teSZo1_Owa/temput/1/DSC29359_2.jpg)
