--- a/en/activation/_posts/2015-07-20-stand.md
+++ b/en/activation/_posts/2015-07-20-stand.md
@@ -3,7 +3,7 @@ title: "Stand"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/NAWGUtTTMiyrd_djWfbcfws56CyqpL-774PlpNhOVolhpkwiwwFWoOXJPBo3mL5pCF9QdwkLv9m1bwdJgOCQqhQCDGYfMi4C_GB2w5Qf8CozQoaDq5NoJDTxdvX5K_gxPWVaw7upHCBuiEQzi-jh6yjxEOEkosoDJBmdhTyLak_3Pv6PWX_NXs1_2XTVF3Evucoyc90PeHPsp-aTeuF0kgKqfEMgHTlHFzo5b5ljHudTeWLPVk4DJh9fFZF4D3puxv0zXwiq9aGh7HEguI0ft0KMNvFLFxV14SvUo1QcKLSuzoIR4mdWCK1iMXspCnY-NctKJ5896onkbfSq1mnaNDETj65akJm9fZvHK-7UxD_giq6SWoy6nHqH2tZD4ngwAzdhcSLdLLFnxb7fHeUriJIn6eZ2PtxtovgoWJS-BGKc9uPzPRIJHaJ9IVfVmLtnz2lvzTnAAyYPhT_DLP1TpChGTasiBc6JFWDqH5TsmhxGlPCBNfXuTSHH6Uc0ET-TclDhU2csTow3fzHUyqnuN2dprVgevR_8SrlZwam38fQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC0sopgCXJGWtu-p4NC8Wh7a/aktivointi/koroke/DSC46977-245px.jpg
   thumb:
 ---
 
@@ -15,24 +15,22 @@ We started playing this game with lower stands so that the tasks wouldn't be too
 
 ---
 
-[![](https://lh3.googleusercontent.com/GpFGy4mBJUdWdbYCAW5gxO35dDAX4nkCyMgyzhcXB48tpSrZmBdLrf1KXgs9sK0NTkDtK1MFmXRHxGfQkxnZzyCEeeEOB2wunwe1NmMP7Zago66ARcK9OeY_rchkbEB8QYAPC6B-hWCG7_lGlK3ESywwnwG4u2GTFBsN5ah_trx9yy5gJukpuA2gU65LkmZjptKxsLmXtH0TNG_KcrUi5T6p3QOKfCP1YJwMAMzq4Z7irxacwpVbTYqVuPibgs5RVoHz18JqlIlqPH8G8nTTaEos3MC5A8fN_hHtrkWqU78j-BOG44Jwk1cZMMyhcango619JJhRGLUIhaT23SR0EXKfcHVM_-MhO4fecU3bjhy5qYLZD05XfZOWLMH-_X3zDh8USYwLx_pYjiZxRgLPfEnlMy9zBRma42fN4djtKh_16MwvuIdZ-qTv36Yeaxosdx_IqFgjtw3O0AePpY8Wt1XjMhr4RpQt7ohnqDmJbLhmgRunugMWFkrvfbg3Er8Xd0saFvBakVbUN34HfHHq49dZ_RD2p8nO4E6KH0V5Ec4=w800)](https://lh3.googleusercontent.com/GpFGy4mBJUdWdbYCAW5gxO35dDAX4nkCyMgyzhcXB48tpSrZmBdLrf1KXgs9sK0NTkDtK1MFmXRHxGfQkxnZzyCEeeEOB2wunwe1NmMP7Zago66ARcK9OeY_rchkbEB8QYAPC6B-hWCG7_lGlK3ESywwnwG4u2GTFBsN5ah_trx9yy5gJukpuA2gU65LkmZjptKxsLmXtH0TNG_KcrUi5T6p3QOKfCP1YJwMAMzq4Z7irxacwpVbTYqVuPibgs5RVoHz18JqlIlqPH8G8nTTaEos3MC5A8fN_hHtrkWqU78j-BOG44Jwk1cZMMyhcango619JJhRGLUIhaT23SR0EXKfcHVM_-MhO4fecU3bjhy5qYLZD05XfZOWLMH-_X3zDh8USYwLx_pYjiZxRgLPfEnlMy9zBRma42fN4djtKh_16MwvuIdZ-qTv36Yeaxosdx_IqFgjtw3O0AePpY8Wt1XjMhr4RpQt7ohnqDmJbLhmgRunugMWFkrvfbg3Er8Xd0saFvBakVbUN34HfHHq49dZ_RD2p8nO4E6KH0V5Ec4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACgbirn11bQxrENWP85bx96a/aktivointi/jaapalamuotit/DSC46867-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC6dlTJ1Bk425ojsGWX1sAga/aktivointi/jaapalamuotit/DSC46867.jpg)
 
-[![](https://lh3.googleusercontent.com/Ue2XGR2Pua5ghXAFcB0mIq_2yxOU6C359DT6H84ZSHHvN-ZjCmp0VRDTAq9jf_AASbS85hyD_4YxBoP-7fQ1pHntN9Lw3Vc0HxO-Xo2qDUZ8TFsvikcVUVLrQp7XVTuDdaiewLHDI_9-moEyG6NAJy9HCD0OK9D3k3h7KIArpTBIGSNghgC_9zUa3jaN8uI_kGFwGytxx5K8vqP6H_ihvD6FUTI0KDi4W1IzdllQCAHhkFtASrTkB8lQn6eIZKxNSVa_NW1Vxk8iPGwNFrCBQ4paJYSgjuhtKWlgS_DNBjP6ocjODOansQLe3yNtVmWA9v3OW-wlaV156vDcRsld6OuoXtwIbbSunJ2AhylRepv3FRCqfCengxbh31OuvN4PG5MUcdKeQFIXu7iw5XwZwfhDOLmbUnGtaoKc-Ul7Y_3nDc0PDjAScvxYoAtn1GfGaGA2JufZ08xPuc50En3n6pTEFMBB1V_UbSxAPExT5cOBpJLP6N39HfLlMsmjgHucY_ONgndufFNxu3jrUxlqQishL1GTfBO78OBn3_Tpxd8=w800)](https://lh3.googleusercontent.com/Ue2XGR2Pua5ghXAFcB0mIq_2yxOU6C359DT6H84ZSHHvN-ZjCmp0VRDTAq9jf_AASbS85hyD_4YxBoP-7fQ1pHntN9Lw3Vc0HxO-Xo2qDUZ8TFsvikcVUVLrQp7XVTuDdaiewLHDI_9-moEyG6NAJy9HCD0OK9D3k3h7KIArpTBIGSNghgC_9zUa3jaN8uI_kGFwGytxx5K8vqP6H_ihvD6FUTI0KDi4W1IzdllQCAHhkFtASrTkB8lQn6eIZKxNSVa_NW1Vxk8iPGwNFrCBQ4paJYSgjuhtKWlgS_DNBjP6ocjODOansQLe3yNtVmWA9v3OW-wlaV156vDcRsld6OuoXtwIbbSunJ2AhylRepv3FRCqfCengxbh31OuvN4PG5MUcdKeQFIXu7iw5XwZwfhDOLmbUnGtaoKc-Ul7Y_3nDc0PDjAScvxYoAtn1GfGaGA2JufZ08xPuc50En3n6pTEFMBB1V_UbSxAPExT5cOBpJLP6N39HfLlMsmjgHucY_ONgndufFNxu3jrUxlqQishL1GTfBO78OBn3_Tpxd8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB-S_0bbPukqI7ZBIF6G8qPa/aktivointi/jaapalamuotit/DSC46872-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABC0__9xXzNePLxLco0iSIQa/aktivointi/jaapalamuotit/DSC46872.jpg)
 
-[![](https://lh3.googleusercontent.com/EfYzePuyLbKltOWupJrZj9qId3F4fXLqsq7MJjAnxws_dD5gqgDedxo3Yh6Kl-a96IQ7Ralgt3iQ5Vvad5pY_6rfz5kEp6skE6YJHtwRZl_GFwiLuwi78AAFCN9mgw5AwX3gUAglOpKvCQdOTeMEtcUksw9PvQeegsuPhuP7sYAfwXmhr3OgKgTcYnD5ij_ZbjRKCdwQgpJdxgSrPtXUBPjpOjxkSDWrsEm9wErgLd8UTXUOib-YZzO8tJnh_cXcaDcQstgk8ctezYgM9r69EDTuCy9BZlPa0ZBEGkAYx42Wu3gvKmyoUJE_cxqvOMQ1fAjzOuwP7vaPTcZYFrYXRKForAe2_fN32f9u2DQesRzwSKmmzqtu5B17DAMvDLLbtAathN8av9mAurFkGzDNKvNklH-Quq0I2aKO1oJiIF8fgZeQPcBgFVIy3eNiFHeDYWeNznVvxKFr0FLTouz2Uw5SW3r88p8kBj9ZzbufyBK4QdWLojDsYhaaDpTPD8A25zQ_JUyCUstJdHz1bDElUq_MkR_wI-zxodAyVYYwA-Y=800)](https://lh3.googleusercontent.com/EfYzePuyLbKltOWupJrZj9qId3F4fXLqsq7MJjAnxws_dD5gqgDedxo3Yh6Kl-a96IQ7Ralgt3iQ5Vvad5pY_6rfz5kEp6skE6YJHtwRZl_GFwiLuwi78AAFCN9mgw5AwX3gUAglOpKvCQdOTeMEtcUksw9PvQeegsuPhuP7sYAfwXmhr3OgKgTcYnD5ij_ZbjRKCdwQgpJdxgSrPtXUBPjpOjxkSDWrsEm9wErgLd8UTXUOib-YZzO8tJnh_cXcaDcQstgk8ctezYgM9r69EDTuCy9BZlPa0ZBEGkAYx42Wu3gvKmyoUJE_cxqvOMQ1fAjzOuwP7vaPTcZYFrYXRKForAe2_fN32f9u2DQesRzwSKmmzqtu5B17DAMvDLLbtAathN8av9mAurFkGzDNKvNklH-Quq0I2aKO1oJiIF8fgZeQPcBgFVIy3eNiFHeDYWeNznVvxKFr0FLTouz2Uw5SW3r88p8kBj9ZzbufyBK4QdWLojDsYhaaDpTPD8A25zQ_JUyCUstJdHz1bDElUq_MkR_wI-zxodAyVYYwA-Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl2A7zcCShllEONBWS4a3Ta/aktivointi/koroke/DSC46941-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAgA2Qe3LdjrU9WEFBgNdYIa/aktivointi/koroke/DSC46941.jpg)
 
-[![](https://lh3.googleusercontent.com/NAldMRdHgfaSLwURRiN6jgXO1mAeWz5kUc9s2-m0xYid2GHTcfHhq2jISMtndoPCfH-sMe3zBUEMIaBVDH-767iQmooH7Q1HUz37z6DhuZoY5R9YvcyR82Cj-f-xkfA1Ems5JzHNuY85qWKme6CWsHpvBMHLM9mn2izoN60wMdq7EgKRKLy5gNpC_a60wt2ZGQ_s6fWlFiqLdvrMHssZSLtg4QXFQlEXvzIw3VYrnqohE5MuH8IQ2-xefHeJYuP276GvDLIicJTkARd4gnuxJKBUlymcza4NEifANANT_KicfXOTsev8DxEPiLws3ltjDq0mQ2sBZ2A3xZQokVq0fEubeEXGhkDZ8bx8BFvP6Wzlcwewlph9qR6sch_E18ff_eD-FEFaa3KDyv4bc--kqCVyDhWHNkPZYdWQ0cCMfL93olJVMatFKhOqpNxgqzlncxtSQxqDKaN4G14-sKrggkdRwQjBqfJr7dlFfJ4FxpodUeG1UnQ8h7_2AytBvAfm9NVc2dG-DVcVzwlWoqTW7cWofPXUy2STvvZsS4_cejU=w800)](https://lh3.googleusercontent.com/NAldMRdHgfaSLwURRiN6jgXO1mAeWz5kUc9s2-m0xYid2GHTcfHhq2jISMtndoPCfH-sMe3zBUEMIaBVDH-767iQmooH7Q1HUz37z6DhuZoY5R9YvcyR82Cj-f-xkfA1Ems5JzHNuY85qWKme6CWsHpvBMHLM9mn2izoN60wMdq7EgKRKLy5gNpC_a60wt2ZGQ_s6fWlFiqLdvrMHssZSLtg4QXFQlEXvzIw3VYrnqohE5MuH8IQ2-xefHeJYuP276GvDLIicJTkARd4gnuxJKBUlymcza4NEifANANT_KicfXOTsev8DxEPiLws3ltjDq0mQ2sBZ2A3xZQokVq0fEubeEXGhkDZ8bx8BFvP6Wzlcwewlph9qR6sch_E18ff_eD-FEFaa3KDyv4bc--kqCVyDhWHNkPZYdWQ0cCMfL93olJVMatFKhOqpNxgqzlncxtSQxqDKaN4G14-sKrggkdRwQjBqfJr7dlFfJ4FxpodUeG1UnQ8h7_2AytBvAfm9NVc2dG-DVcVzwlWoqTW7cWofPXUy2STvvZsS4_cejU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACtfEplxI6kj713RPsLoQh8a/aktivointi/jaapalamuotit/DSC46898-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZBLHbb7mXKsx3Ec5SwDO_a/aktivointi/jaapalamuotit/DSC46898.jpg)
 
-[![](https://lh3.googleusercontent.com/dd-xMvEZQUzQLVj15pZ_CHLI1jVWJGFKf2M_dX7r-14lwBMV7YRThi1lX4kiWglhg9SIObhHwF6590q-7hEohigTH-sAXpLzTfhpUgX8jjhjmrjRdOuYLQQu_eAZEZqvGPlYKRzH5mbzTbernYo3PULeVWAf3A4gDn2XKCoCZFTAo5S_WPPNMYzHCjUWJfoWpQbOIjupx8kGet0_wrRXrKAuH0qDHhoLll32HYUlbuDXUlosDlGuBgP7_5tlOv_C9ffV28oNQhKPRjpiwwZMTLqz3XFM19miMfBkNntrqMJ4HG-loDY3Kw2vEUYX2oz498_0SFDVHbOf_fBNEgve7k8ZLHDX0bs3tL1l813jk2uzJjwRhty6FYlBkE59lTmxuyi8iowmjjnQysePPSdwuYQQbttpEjFSF2FzMX7JRBWEn_DQSx7cBT_yu-Rgj1al5Ak9wxl5EupzWImjAh42q5wiFwCGflQ_GkdopKp1QrNJOLe9Ec5JrFoAQDGBSlEl5gRt7UmSd8fNpiGTuBMLiBUvZ0cje57HbxKnV9xWvq0=w800)](https://lh3.googleusercontent.com/dd-xMvEZQUzQLVj15pZ_CHLI1jVWJGFKf2M_dX7r-14lwBMV7YRThi1lX4kiWglhg9SIObhHwF6590q-7hEohigTH-sAXpLzTfhpUgX8jjhjmrjRdOuYLQQu_eAZEZqvGPlYKRzH5mbzTbernYo3PULeVWAf3A4gDn2XKCoCZFTAo5S_WPPNMYzHCjUWJfoWpQbOIjupx8kGet0_wrRXrKAuH0qDHhoLll32HYUlbuDXUlosDlGuBgP7_5tlOv_C9ffV28oNQhKPRjpiwwZMTLqz3XFM19miMfBkNntrqMJ4HG-loDY3Kw2vEUYX2oz498_0SFDVHbOf_fBNEgve7k8ZLHDX0bs3tL1l813jk2uzJjwRhty6FYlBkE59lTmxuyi8iowmjjnQysePPSdwuYQQbttpEjFSF2FzMX7JRBWEn_DQSx7cBT_yu-Rgj1al5Ak9wxl5EupzWImjAh42q5wiFwCGflQ_GkdopKp1QrNJOLe9Ec5JrFoAQDGBSlEl5gRt7UmSd8fNpiGTuBMLiBUvZ0cje57HbxKnV9xWvq0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQi6Xmq-BROlFu0dkca6uDa/aktivointi/jaapalamuotit/DSC46904-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADcbc9lKX3-LV_Kz5rRL7K6a/aktivointi/jaapalamuotit/DSC46904.jpg)
 
-[![](https://lh3.googleusercontent.com/JUWG8QGiSP4hbRBGEMeY-49LsORpsgFp12Dd5lEaKzk1OWu4vCGmKkY93jHsvl_SjIyDUTRntJgMHtzOM1tXDQiuCK7CStDLzKumkeCvxIrJwc6QToGdPM5kVxOOLTTgHJiDHzKVzihEnUJ144IFy4fLjiKgQvc_qYVAMVAJj4cv_k8F30hN5AbjQvW5dxsAS6HlhHLSCmJLdkw1OCiw7zy-Xx9rAGQAkRW27GwaYslI_YE5EN20YMUEf81rMvFiFtmQe7XmUOqkn6sUgdbs8lo73G6bOopSJXGjLVztYsPAnrVptrSknSfqX-GnKUbGZV9K9Fv0Yf_smGuTFpEDwSMEgmT6q5aRmWcg7fCjuakMRqiPMM-ad-USZxBWYyoaN7jR-OOaZNiJWClgNfJRYHSEY7flYRrC_rvChJW1bgVNgVQKNP7Z7qsFqxe-kSSlm67P5blMbIyDDOgsNYEn766PjrIniGnJvIUnYlnydNDlhAUMP9Gm4Y3SWw2BJlnZoF5327-6LOoIXSDtXgKtFRmUtoeis5o8reLKYOLdfY8=w800)](https://lh3.googleusercontent.com/JUWG8QGiSP4hbRBGEMeY-49LsORpsgFp12Dd5lEaKzk1OWu4vCGmKkY93jHsvl_SjIyDUTRntJgMHtzOM1tXDQiuCK7CStDLzKumkeCvxIrJwc6QToGdPM5kVxOOLTTgHJiDHzKVzihEnUJ144IFy4fLjiKgQvc_qYVAMVAJj4cv_k8F30hN5AbjQvW5dxsAS6HlhHLSCmJLdkw1OCiw7zy-Xx9rAGQAkRW27GwaYslI_YE5EN20YMUEf81rMvFiFtmQe7XmUOqkn6sUgdbs8lo73G6bOopSJXGjLVztYsPAnrVptrSknSfqX-GnKUbGZV9K9Fv0Yf_smGuTFpEDwSMEgmT6q5aRmWcg7fCjuakMRqiPMM-ad-USZxBWYyoaN7jR-OOaZNiJWClgNfJRYHSEY7flYRrC_rvChJW1bgVNgVQKNP7Z7qsFqxe-kSSlm67P5blMbIyDDOgsNYEn766PjrIniGnJvIUnYlnydNDlhAUMP9Gm4Y3SWw2BJlnZoF5327-6LOoIXSDtXgKtFRmUtoeis5o8reLKYOLdfY8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAL01DB1Y_pdF5Oco-N2CrRa/aktivointi/koroke/DSC46977-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1vGd6djp0NaMTSNw_rUqoa/aktivointi/koroke/DSC46977.jpg)
 
-[![](https://lh3.googleusercontent.com/EtXkaSUb-busLZEvCa5mUJl-p-8th3H5QRA2Or-oHjCUa-Y3R0RQ6If4cXhai8yFBVVqJVWrCoEQTkRWfw4SZ1P1Fr8TpZValmVutb9XPcAojfi_mCDthAuAi1CX8h8RW_dEXvj0JUNwtSd-Qcs83HSnLphoPv3YQmQVGJ3ZDl5VQyZVF9wySHzmUQdWOqY12AvLYFH2d1C5Dyc5neRx99OPhConxAKDc7chgDh8op7i1ojtR-7_dcuip4WGvlfSZvGdwNG-LsdVp5E8kaxvmiVBzl75OEFJiWtqPfPCq2kE5q4WX170aeNafeC4INAWVBHQrraR8jaGEmMjq9bOOCS14MePPsceT4Vl4QTM2JWOD2TDAAvzAwn9I9uzZTsDZ2K3zf8UBlQ7uWD1_3Iy_qCw7mPnTJtPeCke-17PwifCi17rbe-sXO9PUV22TyVMLZBjdRe2LigSPgZfyb-n1ft-3rrhpBNs-3rMjsyp-GH2WLWuUNDjtMm1iAjKOr5Qm3sW5ZJmlBAQ0jMVjJlWhczqNCsagwUPmzGulQa6tYI=w800)](https://lh3.googleusercontent.com/EtXkaSUb-busLZEvCa5mUJl-p-8th3H5QRA2Or-oHjCUa-Y3R0RQ6If4cXhai8yFBVVqJVWrCoEQTkRWfw4SZ1P1Fr8TpZValmVutb9XPcAojfi_mCDthAuAi1CX8h8RW_dEXvj0JUNwtSd-Qcs83HSnLphoPv3YQmQVGJ3ZDl5VQyZVF9wySHzmUQdWOqY12AvLYFH2d1C5Dyc5neRx99OPhConxAKDc7chgDh8op7i1ojtR-7_dcuip4WGvlfSZvGdwNG-LsdVp5E8kaxvmiVBzl75OEFJiWtqPfPCq2kE5q4WX170aeNafeC4INAWVBHQrraR8jaGEmMjq9bOOCS14MePPsceT4Vl4QTM2JWOD2TDAAvzAwn9I9uzZTsDZ2K3zf8UBlQ7uWD1_3Iy_qCw7mPnTJtPeCke-17PwifCi17rbe-sXO9PUV22TyVMLZBjdRe2LigSPgZfyb-n1ft-3rrhpBNs-3rMjsyp-GH2WLWuUNDjtMm1iAjKOr5Qm3sW5ZJmlBAQ0jMVjJlWhczqNCsagwUPmzGulQa6tYI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAChKNr7pHCw30La1w2L7b-ua/aktivointi/koroke/DSC46979-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABlQIZqgU84l1gYhs-ou6Mca/aktivointi/koroke/DSC46979.jpg)
 
-[![](https://lh3.googleusercontent.com/_ykcvotKGA2PDzIOXb8hjQdTVTBqj4uuPDh-jSyasBgLmcC1Qcho4_cRBE6PKoJD_5AHnQBVGJWCApXRnf63PMsaYB6lNLNZBmWvVeRlpieDfKspiAoWx_lFLt3piv34i6LDznRjiEHhnDqauiaRZEytnEVnpgjTIg0fuxAxIwmTgbI85--zyJMCbDN08vINQSkmZRJVuruy2tppA3Tvmc1Lapd409YKZcXNlTMlEdcJe0vM63yvOhWKSyuBQVh5J57hMggbZ5XpkfSjEgg4bQDRd2P6mww8FUVnEi_v6QRdQXtzuXv3nfiMHCjzVCFxTqxpiRDDExvZJK0FzwKLGJ1KkWg_sTtacruGQ-p_o7M3iDrkabX6cTTRL1wceVdFLE--Xxt7fikYNJQrC4r4mXrb_83VSQ9BIp99n4KYhFex5LL9dd8gevk9951vxmD2XTNn-9V9KJCqdLLq--2EwelT8qfXPTHjn0S3adecJ2oel_zrqo9kmjj1HfIwFPbE7vBPmEaat1x3lbpIs7eX2CoZoWa6Al3COp1jpBnNuiI=w800)](https://lh3.googleusercontent.com/_ykcvotKGA2PDzIOXb8hjQdTVTBqj4uuPDh-jSyasBgLmcC1Qcho4_cRBE6PKoJD_5AHnQBVGJWCApXRnf63PMsaYB6lNLNZBmWvVeRlpieDfKspiAoWx_lFLt3piv34i6LDznRjiEHhnDqauiaRZEytnEVnpgjTIg0fuxAxIwmTgbI85--zyJMCbDN08vINQSkmZRJVuruy2tppA3Tvmc1Lapd409YKZcXNlTMlEdcJe0vM63yvOhWKSyuBQVh5J57hMggbZ5XpkfSjEgg4bQDRd2P6mww8FUVnEi_v6QRdQXtzuXv3nfiMHCjzVCFxTqxpiRDDExvZJK0FzwKLGJ1KkWg_sTtacruGQ-p_o7M3iDrkabX6cTTRL1wceVdFLE--Xxt7fikYNJQrC4r4mXrb_83VSQ9BIp99n4KYhFex5LL9dd8gevk9951vxmD2XTNn-9V9KJCqdLLq--2EwelT8qfXPTHjn0S3adecJ2oel_zrqo9kmjj1HfIwFPbE7vBPmEaat1x3lbpIs7eX2CoZoWa6Al3COp1jpBnNuiI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXmJD9rf7xVcsudT9wM0P_a/aktivointi/koroke/DSC46967-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC2qlMt1rgc_RCpU67set4ca/aktivointi/koroke/DSC46967.jpg)
 
-[![](https://lh3.googleusercontent.com/DXMJ8JiBIO1ULhHyW0j6aelsKQlMMlN299HMo6pB0E14AZQkSdaxUoEqLV7yltISpAVZm5m1Hn9__MXtOA9E0BRTa9u3d6pJkI4Q72NTUW7HUBeIm-DjmAubYQ4bUK2_J2i6bWmH14IzTjuPAUWpQrgJduDnFkT9VSTp3AoQQ51eumzf8DGSLfZnTSHsra0Iof95kXapwa2qEoSR0jlf8oOQonLOmqMfri_CErLM9VepGDJrNFHVzaa1k-RR6RZYQv0dzZAwpOIYKDdQMvwmcd70Wr7TsLV5_GylNQBDVPOLejDpHE3ItSqGuz5r-T-6L5fbJ2TTgOokH0QeT41wL9WJS2RUGpMSBtjVFbjyYa_A0v00_gkTvWFho9Z-652O_XPEnwvHr-tRGCbk_dM-mrOc1L72UJcv_kayTuhiQP1RSuj8sn3ziqarL2p7upL00siMZT2hPanF-AFBTUG1u90FSf6SgpxZXuPqwY5Oc8o3D-uuKGbgdLM_Gp8pLojLzgozhoQOtB5k-hNpft0DYAT9-WfZEY7W7m6gysDoHfA=w800)](https://lh3.googleusercontent.com/DXMJ8JiBIO1ULhHyW0j6aelsKQlMMlN299HMo6pB0E14AZQkSdaxUoEqLV7yltISpAVZm5m1Hn9__MXtOA9E0BRTa9u3d6pJkI4Q72NTUW7HUBeIm-DjmAubYQ4bUK2_J2i6bWmH14IzTjuPAUWpQrgJduDnFkT9VSTp3AoQQ51eumzf8DGSLfZnTSHsra0Iof95kXapwa2qEoSR0jlf8oOQonLOmqMfri_CErLM9VepGDJrNFHVzaa1k-RR6RZYQv0dzZAwpOIYKDdQMvwmcd70Wr7TsLV5_GylNQBDVPOLejDpHE3ItSqGuz5r-T-6L5fbJ2TTgOokH0QeT41wL9WJS2RUGpMSBtjVFbjyYa_A0v00_gkTvWFho9Z-652O_XPEnwvHr-tRGCbk_dM-mrOc1L72UJcv_kayTuhiQP1RSuj8sn3ziqarL2p7upL00siMZT2hPanF-AFBTUG1u90FSf6SgpxZXuPqwY5Oc8o3D-uuKGbgdLM_Gp8pLojLzgozhoQOtB5k-hNpft0DYAT9-WfZEY7W7m6gysDoHfA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAIhQ8FLi3GXsM6j2gbokXEa/aktivointi/koroke/DSC48531-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABK61fgj0pVtdOoKa9vfH8na/aktivointi/koroke/DSC48531.jpg)
 
-[![](https://lh3.googleusercontent.com/nrAe8-e6kFC5ZF_BKSXqFGUjx1U1_pl1pZshPrsWfbzLKV4Z8sz07sYzQLY27E8Mhfnd4LJDNCC6kRWyqU_M5mnlTiXL3ORPeIJ1Eg8evwadQ5SdaTKh6C8s77LrolciMl3UdkjfnGiKX3XmcPxhPcwLyuaaiwxDmlQ9vBmE8WgPIsa5HEVN6LE_pgtGaz7axcngLUgg-y-DMGR6qkQouwTFXe58YlmiHYXN5319tZVJyhOXdEkd1lLupJub4G7UrWIqu7uHYgVtc7UWI3LRynnr2V2MnQc-z1HNwsonHM6nCLAlVvR1iYQvHcc27tUc1Wi2eI3T2u3ejwaBPUqS4xVTAyTQY3HzYTo9U5Dp80dBXCKxO3vy8Te3iI3gH80ft28sg3wN8cyBw9sitiG54ndfi3ZD_o6HDRrTmRI5NgIxTK58FTiYE5bOw5LtWF8Fz2n9gdNi1kCvHChM7ToC-CxzOyxmPDW5TONDiXDHbbsSNcapj31ggi0RksLvSwo6zu0l9P7I-md-W4fteizsuECs4uPMrPY8BWlOoG6gljM=w800)](https://lh3.googleusercontent.com/nrAe8-e6kFC5ZF_BKSXqFGUjx1U1_pl1pZshPrsWfbzLKV4Z8sz07sYzQLY27E8Mhfnd4LJDNCC6kRWyqU_M5mnlTiXL3ORPeIJ1Eg8evwadQ5SdaTKh6C8s77LrolciMl3UdkjfnGiKX3XmcPxhPcwLyuaaiwxDmlQ9vBmE8WgPIsa5HEVN6LE_pgtGaz7axcngLUgg-y-DMGR6qkQouwTFXe58YlmiHYXN5319tZVJyhOXdEkd1lLupJub4G7UrWIqu7uHYgVtc7UWI3LRynnr2V2MnQc-z1HNwsonHM6nCLAlVvR1iYQvHcc27tUc1Wi2eI3T2u3ejwaBPUqS4xVTAyTQY3HzYTo9U5Dp80dBXCKxO3vy8Te3iI3gH80ft28sg3wN8cyBw9sitiG54ndfi3ZD_o6HDRrTmRI5NgIxTK58FTiYE5bOw5LtWF8Fz2n9gdNi1kCvHChM7ToC-CxzOyxmPDW5TONDiXDHbbsSNcapj31ggi0RksLvSwo6zu0l9P7I-md-W4fteizsuECs4uPMrPY8BWlOoG6gljM=s0)
-
-[![](https://lh3.googleusercontent.com/HhoBXZ5WQGKT_a9aFP6lXA2UF42nMP_8X-csOT530ysFdSAJ7_r4C93_4EklEzufy-IKYOVzFGC-eSjlB0nS5FCUD6CTyRWcIiNRjT0kLvgQIZHTbi0S5LdgYmOTNdsmTd6tPdZ1kp_twfEUW_e6PzWZvTf1SRD86TlHdxlGr96XBLUhAOs-QB04hg8Y_v0N36SOOn21FJcnNV13h_1k_sonZvzFawYGpJcZ4he2piUmdBv7-KjsD2ZvUHLeKobyjyf_uneE0c-zrDBFXyfylKaLtnhOvBFh-yQMxHM8MGwmND2lxS7cHCDpZGyQFguui96VAuREbhZRdYIuDTcmivrnScc4VhxEuiv1RBrI8wcMxCkkqTsHqRKZ9a3SlUPWVsbuYSKcrd-s0eG-flXPrG9RNFHBkS3I9HSAzh441p1APinPPMsq8qUQeRXtKYDhT5VCPj4H9uQsrB9Oy8vQby5Q3oLOCxRpmNnK1cUemiuJHGbHExD0RgUI2IUyDw4liHcFaGizQrw57rSK194hpiXFMY1Ic97dNzqdrbPz1pk=w800)](https://lh3.googleusercontent.com/HhoBXZ5WQGKT_a9aFP6lXA2UF42nMP_8X-csOT530ysFdSAJ7_r4C93_4EklEzufy-IKYOVzFGC-eSjlB0nS5FCUD6CTyRWcIiNRjT0kLvgQIZHTbi0S5LdgYmOTNdsmTd6tPdZ1kp_twfEUW_e6PzWZvTf1SRD86TlHdxlGr96XBLUhAOs-QB04hg8Y_v0N36SOOn21FJcnNV13h_1k_sonZvzFawYGpJcZ4he2piUmdBv7-KjsD2ZvUHLeKobyjyf_uneE0c-zrDBFXyfylKaLtnhOvBFh-yQMxHM8MGwmND2lxS7cHCDpZGyQFguui96VAuREbhZRdYIuDTcmivrnScc4VhxEuiv1RBrI8wcMxCkkqTsHqRKZ9a3SlUPWVsbuYSKcrd-s0eG-flXPrG9RNFHBkS3I9HSAzh441p1APinPPMsq8qUQeRXtKYDhT5VCPj4H9uQsrB9Oy8vQby5Q3oLOCxRpmNnK1cUemiuJHGbHExD0RgUI2IUyDw4liHcFaGizQrw57rSK194hpiXFMY1Ic97dNzqdrbPz1pk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9AzgTrVAUnq5l15E9lG8Va/aktivointi/koroke/DSC48532-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABkmqpH12_2Y_hzfh9Kv2UXa/aktivointi/koroke/DSC48532.jpg)
