--- a/en/activation/_posts/2015-07-20-dvd-case.md
+++ b/en/activation/_posts/2015-07-20-dvd-case.md
@@ -3,7 +3,7 @@ title: "DVD case"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/oyKQrnw9HGfHaJGDdPVMF0YFL-N30PprGsnxSur-xdY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADs33Uv3j9MB9wJ47KuyjxOa/aktivointi/dvd-kotelo/DSC33080-245px.jpg
   thumb:
 ---
 
@@ -17,14 +17,14 @@ Always remember to supervise your dog when you give these assignments to him. Th
 
 ---
 
-[![](https://lh3.googleusercontent.com/2mXU9pxVQMTA7tI1pP3-5FXW2UlStUicIPivZ78loQw=w800)](https://lh3.googleusercontent.com/2mXU9pxVQMTA7tI1pP3-5FXW2UlStUicIPivZ78loQw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABofpIbVN3mdEG6o14lhEAla/aktivointi/dvd-kotelo/DSC33045-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACAmgyHZqzeop2P2Y9sbyUga/aktivointi/dvd-kotelo/DSC33045.jpg)
 
-[![](https://lh3.googleusercontent.com/jUf_8RjsgeyfyoBiS054hGbuxgaY22-tWMoIgEtIjtM=w800)](https://lh3.googleusercontent.com/jUf_8RjsgeyfyoBiS054hGbuxgaY22-tWMoIgEtIjtM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAakH2Uak0Ohp6PAuSaMQNia/aktivointi/dvd-kotelo/DSC33086-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA_TutwAYXANKNVOvwK-obAa/aktivointi/dvd-kotelo/DSC33086.jpg)
 
-[![](https://lh3.googleusercontent.com/7aBAweTHm4bBq0BqAkyRVh7YLUmgSs-DAvrwDrctGA4=w800)](https://lh3.googleusercontent.com/7aBAweTHm4bBq0BqAkyRVh7YLUmgSs-DAvrwDrctGA4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA2t4M8ymsfaECZWwz9WExla/aktivointi/dvd-kotelo/DSC33080-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACjPPANuXyUuZqJpHsiMzjfa/aktivointi/dvd-kotelo/DSC33080.jpg)
 
-[![](https://lh3.googleusercontent.com/P9nqt7idslPpemDUEsSFofytlMF7KK4Rp_I_KnqMRMI=w800)](https://lh3.googleusercontent.com/P9nqt7idslPpemDUEsSFofytlMF7KK4Rp_I_KnqMRMI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABuiE6XKmy4qFeuePIpzj2ma/aktivointi/dvd-kotelo/DSC40918-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA6L9U6le25XilgGvYgcwZ1a/aktivointi/dvd-kotelo/DSC40918.jpg)
 
-[![](https://lh3.googleusercontent.com/EOW1Da4eNjT4H8Z7wcwIAS3rZa9gE4iweEh78dPOIko=w800)](https://lh3.googleusercontent.com/EOW1Da4eNjT4H8Z7wcwIAS3rZa9gE4iweEh78dPOIko=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABoC0OpNzmD46AL6XBSFmIKa/aktivointi/dvd-kotelo/DSC40941-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADDKSQuEVEywN9aCQWxYJR4a/aktivointi/dvd-kotelo/DSC40941.jpg)
 
-[![](https://lh3.googleusercontent.com/wpw7aubSo4PCxUZGWbn1Jw8_AZteZ-DFr1yfVW5iM0w=w800)](https://lh3.googleusercontent.com/wpw7aubSo4PCxUZGWbn1Jw8_AZteZ-DFr1yfVW5iM0w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC5WypyeQkDcOXi_nv97ckPa/aktivointi/dvd-kotelo/DSC41068-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADAnlR9OLd00xlVMLsQtWHUa/aktivointi/dvd-kotelo/DSC41068.jpg)
