--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00055.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00055.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/CcmTVbhlOBInijfXTbr2-02uaO0Ya9Yx8-T7Yw56_2My7GD5E7bli-Tne3NzbY9tlOcJX2zLNWhRkxGS-g7KDsqxqhRlUJADYl8ynS5nPDwZHn1KD4LQWHG3DuwlIRDyF6MiSwpEm2DszUez-2eANljDoEdNMB6k1aYg_u2a6PBoqumhptwBoZw5kPbfIYRV4qIeVcxS_DbMOlBq5TniViDjG5cus0Eaylygxd_UX9a7zPJCbHFBXpdCeWfXs_F5Be8XMZDo9mt7Xc6Rq4xsCe44Rqs2ekJLcDCTzy6H-9UQfxb2ptPZsgqLH8QXuWA-HzVQThvFOzvvv9xQndKEdrnuNiioA2ZOFkoopYJDjH6sc-yYw8h9qlwTBgHz8CtV3C8AE2CNvsI_2sCuNjS2OuIrGROhKXFZDnUunshpEXc4tH8WwUS0Ab6bGbDVAV4XagjHwphEdCriTtP2Vpc-DvuSkYE32Bqv_j-7POSVf4-fuBExhVeAcFLyCcn2VGfduWpEiWwK3_N6xhO2FqLVffpem7yjMH_QuBRFR-ZEOtY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABbQhmXuDYlDj6iX5ZyAmT_a/luontokuvat/syksy/DSC47080-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/xc0Uxhg2suu2gQjM_oYrJ7Qiy7UMRDa-BVH3Dzl98n2zbpHoc0YKEkyj0_sIPZUt727Qzg3cqUu01LkQizktK9nEOBvX997QjIAg3IZlmnFRjdfbUNg206wFOboHTJklw02Hy2BGc2q56XNDZD9VnO9eMJrT9IQPGNQjwVNyLMouh0zU1MFLX8EwIALf5TB0Ar874YJxC7QlDfi_C37gDBLj-tWxTpEHKxJLhBLZzjBHKo0KyRCUUU9Ekc_6zk4Lfn1wdZV8WvMjhRvlk7HWzR5qJXdkygmxo2SOVSB07VupeEKSEsiFAXppacZWlTy8gl522_MIu6178g5b4Y90XWNqS3NAUagmJ-KhJSd7y5n3BcwRC5Lv2sJqJ9je1_0-Ar_79KXUiidvrqoOHdNCsOLsgcc08_zk2pMI4b53ip9zYllCut2P4JlIBf3Qy69VvjR5Oz8xnmqCOb6JkXfnHZaT0YcUqrfuv0kaPfPaUFPcUfuRi5FOj1f6ZU2gUqBkNURsl6hLTxsd8tB3X6msM0z_u1vwygGBppHqFEvtc0g=w800)](https://lh3.googleusercontent.com/xc0Uxhg2suu2gQjM_oYrJ7Qiy7UMRDa-BVH3Dzl98n2zbpHoc0YKEkyj0_sIPZUt727Qzg3cqUu01LkQizktK9nEOBvX997QjIAg3IZlmnFRjdfbUNg206wFOboHTJklw02Hy2BGc2q56XNDZD9VnO9eMJrT9IQPGNQjwVNyLMouh0zU1MFLX8EwIALf5TB0Ar874YJxC7QlDfi_C37gDBLj-tWxTpEHKxJLhBLZzjBHKo0KyRCUUU9Ekc_6zk4Lfn1wdZV8WvMjhRvlk7HWzR5qJXdkygmxo2SOVSB07VupeEKSEsiFAXppacZWlTy8gl522_MIu6178g5b4Y90XWNqS3NAUagmJ-KhJSd7y5n3BcwRC5Lv2sJqJ9je1_0-Ar_79KXUiidvrqoOHdNCsOLsgcc08_zk2pMI4b53ip9zYllCut2P4JlIBf3Qy69VvjR5Oz8xnmqCOb6JkXfnHZaT0YcUqrfuv0kaPfPaUFPcUfuRi5FOj1f6ZU2gUqBkNURsl6hLTxsd8tB3X6msM0z_u1vwygGBppHqFEvtc0g=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAf-fHzi0fbm4SFdaExy57-a/luontokuvat/syksy/DSC47070-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACXZ6nVixS7QNBT8PAmD1OPa/luontokuvat/syksy/DSC47070.jpg)
 
-[![](https://lh3.googleusercontent.com/lYN1bWsHMjrt34UBByAoCJqCnpEcZSr153cBjr_jL5ChJU48qR003F3MfR0Yxu3nE7i_NVjDzlGnq8bH13JvmyRdM7p5PUL8bSmGRmUK01hoh2jCslOEPEUOdvuTiupC3q_uo2iNdZoOwzhRNnOk0KnrOB8Wkm4qeSa6P0bD45J1TWShNpkdHQZi1qgpDvbNBE1csyQ-uSQVBSZyqTYMWU_Z7R0DmjaaWEZm7OOMCQgwOrZjUSaHKdv-MW_rBfnCpXr0t0UfEuT38e6JWhMhYKo40SmjIGnEdWmf2zADxocdfTKFvORkTsO6ihMQ5Ox3V4ZgRr6_MjKioYBPQg2sWhMl8CiZ--qQjpu_Cn6wjdLg7R2k_hdpt862bAM5HUvcZ-oAgLMVp2mXLvBlH8Ntk11cBL5hh1mMU57cx0ofXC-xYVWu1k7GTuvEAw3xkxPLUAwuGmOcikf81JAY9ne6IB10mJdlgc-Defo40Ps8r83qw2Z_bfXRNgqsdcwHg2I4rf5ZChTjABdeKMF5r-FwRs1C8DNshJY6ix-pdVxI9Do=w800)](https://lh3.googleusercontent.com/lYN1bWsHMjrt34UBByAoCJqCnpEcZSr153cBjr_jL5ChJU48qR003F3MfR0Yxu3nE7i_NVjDzlGnq8bH13JvmyRdM7p5PUL8bSmGRmUK01hoh2jCslOEPEUOdvuTiupC3q_uo2iNdZoOwzhRNnOk0KnrOB8Wkm4qeSa6P0bD45J1TWShNpkdHQZi1qgpDvbNBE1csyQ-uSQVBSZyqTYMWU_Z7R0DmjaaWEZm7OOMCQgwOrZjUSaHKdv-MW_rBfnCpXr0t0UfEuT38e6JWhMhYKo40SmjIGnEdWmf2zADxocdfTKFvORkTsO6ihMQ5Ox3V4ZgRr6_MjKioYBPQg2sWhMl8CiZ--qQjpu_Cn6wjdLg7R2k_hdpt862bAM5HUvcZ-oAgLMVp2mXLvBlH8Ntk11cBL5hh1mMU57cx0ofXC-xYVWu1k7GTuvEAw3xkxPLUAwuGmOcikf81JAY9ne6IB10mJdlgc-Defo40Ps8r83qw2Z_bfXRNgqsdcwHg2I4rf5ZChTjABdeKMF5r-FwRs1C8DNshJY6ix-pdVxI9Do=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB4UGdQWVHgb63ulyhbOfWya/luontokuvat/syksy/DSC47072-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrkW_L7to6_3JunV9Fi_GZa/luontokuvat/syksy/DSC47072.jpg)
 
-[![](https://lh3.googleusercontent.com/uPMwxSKvH6svc2TE-pDlGeWMX_cyt5LFO8GOZad0g7lKsj1bjk6fV_FULlte_OFuOulm-PEsFCjedYuD5fC7uKGWHpC1wbp_hkeJe9lhAtNZt5kqLsZtUKnShl0XKBmMNDNix-XTEn2t_Ip39i4zp7MTzjCbh7NSe4GfeQd9XlXr0v3ovTD1obJVGxRBVdPwduRLkhqB4DbBuQuMx4vx87KNcAQSI0y0te3aLdMk1xGfXlYS8eTVi3bZLmSpbx6cYNwLAXDH_M9nWRzsvRmnyB32yGVWy4_djm46Svamoi7ra898xyHRTPg-1_-2eev7fLruRgTRBbp8R8GhXf9AOEmwO_unKojH7JjqVhNhNRIxbdTV1fQ0iNk7JflfbWpDWaPBGEu1uBetfb2IIFe8-iH2VwUSr6vmvx9yIzIm99D90pwnoQeD-8Uk15sc4sfZuR0DdOITIz3Xz33FsDQraxTGuJPx8AwML4rdZBTzZjQOFaTa4RxKPcmSQ4BWFAo9zmpaGKLNhjmMp9fL6zL2fvvXyZQoExeXiv0y5N11zZs=w800)](https://lh3.googleusercontent.com/uPMwxSKvH6svc2TE-pDlGeWMX_cyt5LFO8GOZad0g7lKsj1bjk6fV_FULlte_OFuOulm-PEsFCjedYuD5fC7uKGWHpC1wbp_hkeJe9lhAtNZt5kqLsZtUKnShl0XKBmMNDNix-XTEn2t_Ip39i4zp7MTzjCbh7NSe4GfeQd9XlXr0v3ovTD1obJVGxRBVdPwduRLkhqB4DbBuQuMx4vx87KNcAQSI0y0te3aLdMk1xGfXlYS8eTVi3bZLmSpbx6cYNwLAXDH_M9nWRzsvRmnyB32yGVWy4_djm46Svamoi7ra898xyHRTPg-1_-2eev7fLruRgTRBbp8R8GhXf9AOEmwO_unKojH7JjqVhNhNRIxbdTV1fQ0iNk7JflfbWpDWaPBGEu1uBetfb2IIFe8-iH2VwUSr6vmvx9yIzIm99D90pwnoQeD-8Uk15sc4sfZuR0DdOITIz3Xz33FsDQraxTGuJPx8AwML4rdZBTzZjQOFaTa4RxKPcmSQ4BWFAo9zmpaGKLNhjmMp9fL6zL2fvvXyZQoExeXiv0y5N11zZs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACVYF3lXl0Lw6ufaiOdPXgJa/luontokuvat/syksy/DSC47080-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABnI69_hXV1M4_hMcousxJha/luontokuvat/syksy/DSC47080.jpg)
