--- a/luontokuvat/syksy/_posts/2015-07-14-00054.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00054.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/1uSWvDIaChwKAQyd50hxLr27Zl0gXgUU6W0iWiQu5DD47_d5U6Pfnf6U6jeK5fyodXTAjQ9L1ZT7H98IoA1_Kyyxpeya36qMI2ifgUv-M5uVGuAAIE3YDGqMd8OvoxkNp-rl9JotkRR1fg6NxjugqIAC9DXAjsMJgrdOtQLcbRXc1sI9_stITyvjeGmIt8JvkXT6xJ2jA-_yKJkVSy5ZyKf-Hnll8EbFDl6U88mwFDX0PDsNruEObGNlwrkRQYURIY7SLgasU0HsNdwESI2ZrsdZHsT2bsqIQlS_lz5oRD509K5Sl1xa4MKgoPprfDsLf9Wp3o8sOJKnKpXDiWDnZEu33oPlesHDX-T2asJpmi6Q5L6B_wdBCN5cfpkib_kPOuuojiFqM1E93gI8-dk0Rs5sOXws7MlSdEnHltSAuroW1mQkBqVU0tFkxq2hMZcweFpqNEpTpcxqfZ-9R16216O2vpSF9mWVJPjPJ4A4keRHlvtXWi8H0jN9W8NK-_6GDTUsTWBmwNkk9VKzTQjW9CZ_jvBSH7m3nmHmmLZr790=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQossanXvYMGhhbd_gZynBa/luontokuvat/syksy/DSC46755-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/SnlfRJ0aGPZuXWgjwtlaaoWAFHZCngwrpxi1XsrBwYdAjkvwAdIbkdEuVmZHq2P6WDOkitF8jf_l6WPPATNSQLWmKJKqKD9n3VMiRYmW7h9_uAOGuEZREDwqhmPUGAoTHPVmWSPP9vNKVLZalrtB_jM-mYJ6RtkqTp2X4XTJnmfTaWS-FqoFhyYmhq2AK4JZ7w1rHj-3klE8i2Nm5w3LfOr4ljY3qvLBbCBkKxzTAmhgzJzfXBICv47lbbPN0-ReLuSi1HUIc7lEOjxLPcFYWHO70v1e8R1Ecv0FXbRyHFxVfgQu4ahxLXN7FF7k2BM96r1FrWv7mohr3F_nAr7iTzUwdQXarG5ogUYPxJ3fBCcr6SOeJWvzyxcs351IkiEZAUqkoHqNM28WMdB6qaaAf5cZSexY2H71k-beNPZ_OBNtq_1WVSesSboBHzvODI3ni3MRcEFSR0-QSnnc79aLvVqm3iwZiTnFlOTBpgGHCVogylQd5OGIz4lt_5LNtaNt8QMzP_8xm17_UsiE3Cj8EiCS27ymKxOosg4eqpGnhzg=w800)](https://lh3.googleusercontent.com/SnlfRJ0aGPZuXWgjwtlaaoWAFHZCngwrpxi1XsrBwYdAjkvwAdIbkdEuVmZHq2P6WDOkitF8jf_l6WPPATNSQLWmKJKqKD9n3VMiRYmW7h9_uAOGuEZREDwqhmPUGAoTHPVmWSPP9vNKVLZalrtB_jM-mYJ6RtkqTp2X4XTJnmfTaWS-FqoFhyYmhq2AK4JZ7w1rHj-3klE8i2Nm5w3LfOr4ljY3qvLBbCBkKxzTAmhgzJzfXBICv47lbbPN0-ReLuSi1HUIc7lEOjxLPcFYWHO70v1e8R1Ecv0FXbRyHFxVfgQu4ahxLXN7FF7k2BM96r1FrWv7mohr3F_nAr7iTzUwdQXarG5ogUYPxJ3fBCcr6SOeJWvzyxcs351IkiEZAUqkoHqNM28WMdB6qaaAf5cZSexY2H71k-beNPZ_OBNtq_1WVSesSboBHzvODI3ni3MRcEFSR0-QSnnc79aLvVqm3iwZiTnFlOTBpgGHCVogylQd5OGIz4lt_5LNtaNt8QMzP_8xm17_UsiE3Cj8EiCS27ymKxOosg4eqpGnhzg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAac1t6Q8ua4j5aseCPh2s4a/luontokuvat/syksy/DSC46704-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXsFBHX2Bm4V86gOnq3q87a/luontokuvat/syksy/DSC46704.jpg)
 
-[![](https://lh3.googleusercontent.com/0djmPQCI_h6uxB2vCCGj6oAEpoMFWTVvFa3UViThNraSlF-uRjXly2FiZ_SkXvHu77NGyNLr8Q6fDW6BNggyxyaFZho0vdZr2koHuibtX13SHqKxJ5RxaHgqFG5bv-D5MExipzxlqzux2DUtSHiNbzUB6DOguZQhC8I6G634zth_6djUQmae4IzbIZIjt9KKIzfwauCY0Eviw3CMqV7kxoi5N_LWiDfnffut-z_BIq4PYkzOpPs1hylVIynd6sn2AXyfG1wAWeOOdftviWLW8edP5loIbztwrBiP_HMDza9Iz0-dO9c82TABJRdO0mek26_7djU_-JPWFLTuvzCx8JXWDprH2gtv8XVBGwQukjNCiNwau_EwgEDpOEmndHSJOOCkkLqR1bqiIURH28Eg3bg6owjknv3lSR0ZsAUiirbkld5lyeS2bJU7CzcI1u-zJipK_hFY-FFNQZP0TvUZpCRsd9wSNQV9dOS9QlbzHAoUAuk9xC-HMicuNVezUcMWcOzuVkAwJH3l4ywrvhpGTCipKKMPrApSaRc-Kqdh2ws=w800)](https://lh3.googleusercontent.com/0djmPQCI_h6uxB2vCCGj6oAEpoMFWTVvFa3UViThNraSlF-uRjXly2FiZ_SkXvHu77NGyNLr8Q6fDW6BNggyxyaFZho0vdZr2koHuibtX13SHqKxJ5RxaHgqFG5bv-D5MExipzxlqzux2DUtSHiNbzUB6DOguZQhC8I6G634zth_6djUQmae4IzbIZIjt9KKIzfwauCY0Eviw3CMqV7kxoi5N_LWiDfnffut-z_BIq4PYkzOpPs1hylVIynd6sn2AXyfG1wAWeOOdftviWLW8edP5loIbztwrBiP_HMDza9Iz0-dO9c82TABJRdO0mek26_7djU_-JPWFLTuvzCx8JXWDprH2gtv8XVBGwQukjNCiNwau_EwgEDpOEmndHSJOOCkkLqR1bqiIURH28Eg3bg6owjknv3lSR0ZsAUiirbkld5lyeS2bJU7CzcI1u-zJipK_hFY-FFNQZP0TvUZpCRsd9wSNQV9dOS9QlbzHAoUAuk9xC-HMicuNVezUcMWcOzuVkAwJH3l4ywrvhpGTCipKKMPrApSaRc-Kqdh2ws=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQKJ09FpO2Sc_6J-PQAi13a/luontokuvat/syksy/DSC46755-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAw3j4rpef9U6MZQFJL0Y4Ka/luontokuvat/syksy/DSC46755.jpg)
 
-[![](https://lh3.googleusercontent.com/4gwC2Ou5xyt_ArfyPJS4YXBBCDpa4TBWSo3EFeVlod7L09-k0G5PV1o4ndMa6deKMyF5pGSQa6YCYElQ-Xj_J0g-Ueo-piTP-oId7LYLClNsqrLi2-JW1j8aeVL6vFvE6dWygPQbJCa_Hxuh4EqopULvfiVP392g7FmYAP8EaWk_u6lbxPG4OofOgap2DrSacIWOylaMjd7KfrysqBZRpDjyz_7jE6qorHzI1ifOpZbExOB14mGfSf6qZeZd4UaWqJssRXjv2hLuzQ2Dficp_2lUptOjr8Rc94jVWtr2IPeqDCaRuysioja4y4CAi41cEddOPMFxpPBnFYZxW_WDSJTbnJzi68-9crA61UZVcBr6mpMUg_5qWKUZ983_91NxXmhXS5z5ySspP_6dcx-946gVd_ugiyeEC4dxAekugI8xAcUw319Re067S__9JuGiNVC6DZt8X3iR37mwfl-MHd0hzaMgwPRTvctoxS4Coy5ftFcXS7H1Vk3OTYeavb20UZRyTUu6zTrdEXdHDDXDQqicUvIJhKwSlzR7Wd7FcWE=w800)](https://lh3.googleusercontent.com/4gwC2Ou5xyt_ArfyPJS4YXBBCDpa4TBWSo3EFeVlod7L09-k0G5PV1o4ndMa6deKMyF5pGSQa6YCYElQ-Xj_J0g-Ueo-piTP-oId7LYLClNsqrLi2-JW1j8aeVL6vFvE6dWygPQbJCa_Hxuh4EqopULvfiVP392g7FmYAP8EaWk_u6lbxPG4OofOgap2DrSacIWOylaMjd7KfrysqBZRpDjyz_7jE6qorHzI1ifOpZbExOB14mGfSf6qZeZd4UaWqJssRXjv2hLuzQ2Dficp_2lUptOjr8Rc94jVWtr2IPeqDCaRuysioja4y4CAi41cEddOPMFxpPBnFYZxW_WDSJTbnJzi68-9crA61UZVcBr6mpMUg_5qWKUZ983_91NxXmhXS5z5ySspP_6dcx-946gVd_ugiyeEC4dxAekugI8xAcUw319Re067S__9JuGiNVC6DZt8X3iR37mwfl-MHd0hzaMgwPRTvctoxS4Coy5ftFcXS7H1Vk3OTYeavb20UZRyTUu6zTrdEXdHDDXDQqicUvIJhKwSlzR7Wd7FcWE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA9aIWyY7NmG9ZIk_-C37hba/luontokuvat/syksy/DSC46752-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAKEGpCy5cfNrztqk_x5RJYa/luontokuvat/syksy/DSC46752.jpg)
 
-[![](https://lh3.googleusercontent.com/9SYWNCM86B18A360f0Nc2LDveDY7oN9RzFjDrG_cITUi2NDy7qnp_ZvIza_Itb9GqzRyO4rmpu-7RFwfflqFYEAWPdlMNAGm9ksXTQUUFlzuIhfoT8iGfSfozYJY8tgLWpi48TunQY-9Ak0JXo0qkjPXVyWYdGOyla3pEI0HyMMYs3IR5hwovC011mCPrWsYKRJ-qGGy9en1oi6ZhDRiEeg6YLSkgw2EN0EXbnreKOzgOfmGaeW-TBybnHgz6H_KOI1LRFAj5bN2nfw9bLhrGkulXNyE_S9kAt9ggrorXt1JynRXaESuM9V3IpwxgAlmi4aBGNQmgh0-gHBchGZjTSpRZWOsSOiSjT63qAGfIOxeSF9-fm_C2w0xatxum40r4x6-Blwq-sdFhRbjxoS2GSMRcndoQ7_nXM_mFtr4nugKu94tHWaF2Qof2OPd-Z-aDE-KBtKGlRl1_knWDOz9GAXlcB9vbPwP6iqMgOCd8pk5MG06tRvJJtWbn8spDlEuiMQMpPoQrAyTHMo1gNnREqjdmLPt6lDyfojrjTqZboQ=w800)](https://lh3.googleusercontent.com/9SYWNCM86B18A360f0Nc2LDveDY7oN9RzFjDrG_cITUi2NDy7qnp_ZvIza_Itb9GqzRyO4rmpu-7RFwfflqFYEAWPdlMNAGm9ksXTQUUFlzuIhfoT8iGfSfozYJY8tgLWpi48TunQY-9Ak0JXo0qkjPXVyWYdGOyla3pEI0HyMMYs3IR5hwovC011mCPrWsYKRJ-qGGy9en1oi6ZhDRiEeg6YLSkgw2EN0EXbnreKOzgOfmGaeW-TBybnHgz6H_KOI1LRFAj5bN2nfw9bLhrGkulXNyE_S9kAt9ggrorXt1JynRXaESuM9V3IpwxgAlmi4aBGNQmgh0-gHBchGZjTSpRZWOsSOiSjT63qAGfIOxeSF9-fm_C2w0xatxum40r4x6-Blwq-sdFhRbjxoS2GSMRcndoQ7_nXM_mFtr4nugKu94tHWaF2Qof2OPd-Z-aDE-KBtKGlRl1_knWDOz9GAXlcB9vbPwP6iqMgOCd8pk5MG06tRvJJtWbn8spDlEuiMQMpPoQrAyTHMo1gNnREqjdmLPt6lDyfojrjTqZboQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABpKNNJpgj8XKgledcXisI_a/luontokuvat/syksy/DSC46780-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACdopF9s_48NjGfT4sGdjl3a/luontokuvat/syksy/DSC46780.jpg)
