--- a/luontokuvat/syksy/_posts/2015-07-14-00056.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00056.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/6LcsPyHsSIMDuolOOCXHDoLveDgyBlM0gbKczsgZr6MxRydnNE5Oy0FoSqaJ0q316ZiGCXONOaL-gB2OJLw0R3Mie0NuLtBcN_CVK4yQLgQ2qHvvj0hTKU38H-LBYz49m0lxn1MZMTuklOfyZDxCnTRWbVWYCSPoPDKNjo0ELV_qoC4sEgzHdtWO9_ER9JXVCXtdYU6MaLquiKEUMOF4zQAq3CK6bbnaf7Tors23c2KEf-RdVi9sF5kzYR0vCt5Zhj64RS5RMymhd9_2kN4mgxdMPty3JZCM_0arJ3x2citV4DrnQDm0axNa-mRJc2HIiXrSVRRFvmyYegmPZRDmiRvAZkmrfM9pYLq6uA9RoojujZN2sTrOZu9bgQ0Rt3DAoOejIrGA0_zzCIsIcL44Hkdi-WBz3fv_hhJsyMEatp5zlNrNfs8jcZPhHMKC7FF8_zDlHKMZuE56Gyfnokdt_TVepOhcRfeV4B2N4tearBDofkByTZ1xDKOTB5OvhnZk9JHUCFkmX4Dsdngjh4SF7gGLtJc5Qs8IFqzHf2dgH48=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABApsvtknLf_W-NvaHFqOWVa/luontokuvat/syksy/DSC47580-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/eOZHPDZ2j1TkwJck4xjziMmSLXGhFSFznvnvbEJPMky3GrcEopJE5kagAooXhOoH8wqji2tO5IucrJwHtAN-HwjndGIEJE370yA1CRh6sb3x_18O8uzQ18W2KMPe1K_8qfaQfyL7WxAGmuTHuOimT5mLyeE5FqB3F7j7_0RHQ-RtlYVRY9jzzDXUR0v97o4uI4RUHvLnYdSfXnCKqAIlyjjdHlYnyM_PDJGIfCDn4zmQDIHTBEAIMvANyBWSikaQpA67KqrZmL6x-Uzoz6eGsG3mw6ylq2P_BShZ-zFowcV8fFImXJ8zW3hSexUmqPpP-NivNYJUTHIuDnsEGzn7TlA55O4cYYHjl_wGvR0ImFT3g9K4h77fDgSUXSc9ul4CNThucZbIMd9amheosGWnXnHMH7T9wabPV6fMOZ5BqCdg6xZssnwK9bY09Lwy8vYmc6W1wBNsL7LlKMG4UmWDOGefB-G7H2WuOd6dyEqbyHnkvBjLZRgC_Irn59OZQrNHPIcqqxGpw7VFNgPB0jrb7r9i2QHcxW7EwoF9aDIqXgA=w800)](https://lh3.googleusercontent.com/eOZHPDZ2j1TkwJck4xjziMmSLXGhFSFznvnvbEJPMky3GrcEopJE5kagAooXhOoH8wqji2tO5IucrJwHtAN-HwjndGIEJE370yA1CRh6sb3x_18O8uzQ18W2KMPe1K_8qfaQfyL7WxAGmuTHuOimT5mLyeE5FqB3F7j7_0RHQ-RtlYVRY9jzzDXUR0v97o4uI4RUHvLnYdSfXnCKqAIlyjjdHlYnyM_PDJGIfCDn4zmQDIHTBEAIMvANyBWSikaQpA67KqrZmL6x-Uzoz6eGsG3mw6ylq2P_BShZ-zFowcV8fFImXJ8zW3hSexUmqPpP-NivNYJUTHIuDnsEGzn7TlA55O4cYYHjl_wGvR0ImFT3g9K4h77fDgSUXSc9ul4CNThucZbIMd9amheosGWnXnHMH7T9wabPV6fMOZ5BqCdg6xZssnwK9bY09Lwy8vYmc6W1wBNsL7LlKMG4UmWDOGefB-G7H2WuOd6dyEqbyHnkvBjLZRgC_Irn59OZQrNHPIcqqxGpw7VFNgPB0jrb7r9i2QHcxW7EwoF9aDIqXgA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABBhdFktE7euFAdG69gaLw4a/luontokuvat/syksy/DSC47562-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACe3tP3dVc6jLFtsnAi2u32a/luontokuvat/syksy/DSC47562.jpg)
 
-[![](https://lh3.googleusercontent.com/Y95_nioqzzVVmolh2rRZitTAkpc5mvHkMmUkdNqAu0Etzjch5Hivu1ovJhoQJx-T5cQQIg9c_Mov2XmQ8JY7FHiKtygknswhKQ3rCBZfy6-6hqysS0EmlT7sb75-a6XhwbgQCq2GrKaQ2DUf-eY0LAtrkIzXQf7LFAWQXhjp3hu83ro4cemr1Hqdfz9jrcIk_ZcRxqrLYVBEsdl_PoDC7hhROpB2aAFH0nD0_5JoQYpo-1SL_PSLXeSk9InBER8ZRV6fAW5dl4ctfrFZQcvbtqGYF3GxF8CeqyKglf2YDZvq-GTJW4ity5Hiz2BI6z2zEkIkkAbLQkKEfVqQBFdq9Ss9jTTzwx6Dt43_iHcbolMCq7ItoVWZc_1ae8m5tw_a-xwh9uDXz1Vgineib-dHvMKh23v5DJYdHBbWdbDKqV8HI2a5iaQu39FmCZsZSexbWQCMJnq4o2cOLOTG-E7VjghiMz8Lhrw41ysTYilIe13ls_VmVhPCnjffhswIwC0p5kuSTmoZillF6KQ492G998dZXTfkPUbq8V3fX5XmHl8=w800)](https://lh3.googleusercontent.com/Y95_nioqzzVVmolh2rRZitTAkpc5mvHkMmUkdNqAu0Etzjch5Hivu1ovJhoQJx-T5cQQIg9c_Mov2XmQ8JY7FHiKtygknswhKQ3rCBZfy6-6hqysS0EmlT7sb75-a6XhwbgQCq2GrKaQ2DUf-eY0LAtrkIzXQf7LFAWQXhjp3hu83ro4cemr1Hqdfz9jrcIk_ZcRxqrLYVBEsdl_PoDC7hhROpB2aAFH0nD0_5JoQYpo-1SL_PSLXeSk9InBER8ZRV6fAW5dl4ctfrFZQcvbtqGYF3GxF8CeqyKglf2YDZvq-GTJW4ity5Hiz2BI6z2zEkIkkAbLQkKEfVqQBFdq9Ss9jTTzwx6Dt43_iHcbolMCq7ItoVWZc_1ae8m5tw_a-xwh9uDXz1Vgineib-dHvMKh23v5DJYdHBbWdbDKqV8HI2a5iaQu39FmCZsZSexbWQCMJnq4o2cOLOTG-E7VjghiMz8Lhrw41ysTYilIe13ls_VmVhPCnjffhswIwC0p5kuSTmoZillF6KQ492G998dZXTfkPUbq8V3fX5XmHl8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACzAA49XFafHYOhZtnPMkJoa/luontokuvat/syksy/DSC47570-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADskmoVp8IQOjODkjX4Iyzma/luontokuvat/syksy/DSC47570.jpg)
 
-[![](https://lh3.googleusercontent.com/fpPNNBwPCA1pxBYRWjq7fWGNmjJr3U-oiDbnl6ZhDUU34YgP7rdFpA7iE-jBkLig-NLGTNM6xZvvDB1HplmwpX9fI12WZrDVNmqfDJQ1eBXq1CM6UfdYTr-GBWi-mR8FrGO7FFqcIc2ngyuBnDL0ywZvZXZVTRTofx4i1h5_7_Endl4gLt8kpZA5JOChGSEi3bpk8KDbBKrrshquNwC8ez09FfRrOTV-WOxqHIpAkgHfeQSsdoU7H2YKGS9dXIArSDuJOZU3znhS7hCdVEu8hBPgIno90LPzsDj8-dzNHAGSbZ-8Au9agCTLGsiVAqx9a_526MM_sBCa-KTVcGOYpT6-Zf6RWBXrgx0vkR1iO9c56wvE0Cw64_eZXJa_IHZBFeL15jEGoQ0Sg3WT8yLi7kRBVVicp1x4fMUYUuhiGM9EWuw9FL4EUIaIZ2b8M_VsybMV18q3NZBYbFjqlhFl0ZkYlXewmDLsom_ch2f9Fe7UnxTFD816nk-k-kOcdgI5Enj_V3_6X9eKb18_ub-xF7Edf7uUdI3AmLnnniwp1dM=w800)](https://lh3.googleusercontent.com/fpPNNBwPCA1pxBYRWjq7fWGNmjJr3U-oiDbnl6ZhDUU34YgP7rdFpA7iE-jBkLig-NLGTNM6xZvvDB1HplmwpX9fI12WZrDVNmqfDJQ1eBXq1CM6UfdYTr-GBWi-mR8FrGO7FFqcIc2ngyuBnDL0ywZvZXZVTRTofx4i1h5_7_Endl4gLt8kpZA5JOChGSEi3bpk8KDbBKrrshquNwC8ez09FfRrOTV-WOxqHIpAkgHfeQSsdoU7H2YKGS9dXIArSDuJOZU3znhS7hCdVEu8hBPgIno90LPzsDj8-dzNHAGSbZ-8Au9agCTLGsiVAqx9a_526MM_sBCa-KTVcGOYpT6-Zf6RWBXrgx0vkR1iO9c56wvE0Cw64_eZXJa_IHZBFeL15jEGoQ0Sg3WT8yLi7kRBVVicp1x4fMUYUuhiGM9EWuw9FL4EUIaIZ2b8M_VsybMV18q3NZBYbFjqlhFl0ZkYlXewmDLsom_ch2f9Fe7UnxTFD816nk-k-kOcdgI5Enj_V3_6X9eKb18_ub-xF7Edf7uUdI3AmLnnniwp1dM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADw_nkPrJ0EDV8odcKcKvISa/luontokuvat/syksy/DSC47580-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtszD7jPLSMtJBTH7ONFIta/luontokuvat/syksy/DSC47580.jpg)
